// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      LaoWai
    </a>
    <div>
      <ul
        class="navbar-nav ml-auto"
      >
        <li
          class="nav-item mr-4"
        >
          <div
            class="SearchForm mb-4"
          >
            <form
              class="form-inline"
            >
              <input
                class="form-control form-control-lg flex-grow-1"
                name="username"
                placeholder="Search by username."
                value=""
              />
              <button
                class="btn btn-lg btn-primary"
                type="submit"
              >
                Submit
              </button>
            </form>
          </div>
        </li>
        <li
          class="nav-item mr-4"
        >
          <a
            class="nav-link"
            href="/announcements"
          >
            Announcements
          </a>
        </li>
        <li
          class="nav-item mr-4"
        >
          <a
            class="nav-link"
            href="/forum"
          >
            Forum
          </a>
        </li>
        <li
          class="nav-item mr-4"
        >
          <a
            class="nav-link"
            href="/users/testuser"
          >
            Account
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/"
          >
            Log out testfirst
          </a>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="Navigation navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      LaoWai
    </a>
    <ul
      class="navbar-nav ml-auto"
    >
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/announcements"
        >
          Announcements
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/forum"
        >
          Forum
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/auth/login"
        >
          Login
        </a>
      </li>
      <li
        class="nav-item mr-4"
      >
        <a
          class="nav-link"
          href="/auth/signup"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
